ingress/ingress-multihost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-multihost
spec:
  ingressClassName: nginx
  rules:
  - host: whoami.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
  - host: podinfo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port:
              number: 80
